Separated some utility code into a library

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ modLoader="javafml" #mandatory
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
 loaderVersion="[31,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 # A URL to refer people to when problems occur with this mod
-issueTrackerURL="https://github.com" #optional
+issueTrackerURL="https://github.com/Unixkitty/gemspark-mod" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
@@ -24,15 +24,21 @@ displayURL="https://unixkitty.com" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="gemspark.png" #optional
 # A text field displayed in the mod UI
-credits="" #optional
+credits="JonusRockweller for gem icons" #optional
 # A text field displayed in the mod UI
 authors="Unixkitty" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 #description
 '''
+[[dependencies.gemspark]]
+    modId="gemspork"
+    mandatory=true
+    versionRange="[1.0.0.0]"
+    ordering="NONE"
+    side="BOTH"
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.examplemod]] #optional
+[[dependencies.gemspark]] #optional
     # the modid of the dependency
     modId="forge" #mandatory
     # Does this dependency have to exist - if not, ordering below must be specified
@@ -44,7 +50,7 @@ description='''
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
 # Here's another dependency
-[[dependencies.examplemod]]
+[[dependencies.gemspark]]
     modId="minecraft"
     mandatory=true
     versionRange="[1.15.2]"
