--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,8 @@ dependencies {
     // at runtime, use the full JEI jar
     runtimeOnly fg.deobf("mezz.jei:jei-${modMinecraftVersion}:${jei_version}")
 
+    compile files('libs/gemspork-1.0.0.0.jar')
+
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
