--- a/build.gradle
+++ b/build.gradle
@@ -125,7 +125,7 @@ dependencies {
     // at runtime, use the full JEI jar
     runtimeOnly fg.deobf("mezz.jei:jei-${modMinecraftVersion}:${jei_version}")
 
-    compile files('libs/gemspork-1.0.0.0.jar')
+    compile fileTree('libs') { include 'gemspork-*.jar' }
 
 }
 
