Dynamic tier system done, abstraction fixes

--- a/build.gradle
+++ b/build.gradle
@@ -125,8 +125,8 @@ dependencies {
     // at runtime, use the full JEI jar
     runtimeOnly fg.deobf("mezz.jei:jei-${modMinecraftVersion}:${jei_version}")
 
-    compile fileTree('libs') { include 'gemspork-*.jar' }
-
+    //compile fileTree('libs') { include 'gemspork-*.jar' }
+    compile project(":gemspork")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
