--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # MAJOR.API.MINOR.PATCH
-modVersion = 1.1.0.1
+modVersion = 1.1.1.0-dev
 modID = gemspark
 modGroup = com.unixkitty.gemspark
 
 modMinecraftVersion = 1.15.2
-modForgeVersion = 31.1.74
+modForgeVersion = 31.2.0
 
 mappingsChannel = snapshot
-mappingsVersion = 20200430-1.15.1
+mappingsVersion = 20200514-1.15.1
 
 jei_version = 6.0.0.4
