--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,7 +14,7 @@ issueTrackerURL="https://github.com/Unixkitty/gemspark-mod" #optional
 # The modid of the mod
 modId="gemspark" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="1.1.0.1" #mandatory
+version="1.1.1.0-dev" #mandatory
  # A display name for the mod
 displayName="Gemspark" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
@@ -24,12 +24,12 @@ displayURL="https://unixkitty.com" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="gemspark.png" #optional
 # A text field displayed in the mod UI
-credits="JonusRockweller for gem icons" #optional
+#credits="" #optional
 # A text field displayed in the mod UI
 authors="Unixkitty" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-#description
+Credit to JonusRockweller for some assets
 '''
 [[dependencies.gemspark]]
     modId="gemspork"
