--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -54,6 +54,6 @@ Credit to JonusRockweller for some assets
 [[dependencies.gemspark]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.4]"
+    versionRange="[1.16,)"
     ordering="NONE"
     side="BOTH"
