--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,11 @@ modVersion = 1.2.3.0
 modID = gemspark
 modGroup = com.unixkitty.gemspark
 
-modMinecraftVersion = 1.16.4
-modForgeVersion = 35.1.36
+modMinecraftVersion = 1.16.5
+modForgeVersion = 36.0.13
 
 mappingsChannel = snapshot
 mappingsVersion = 20201028-1.16.3
 
-jei_version = 7.6.1.65
+jei_minecraft_version = 1.16.4
+jei_version = 7.6.1.68
