Make gradle handle mods.toml variables

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,17 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # MAJOR.API.MINOR.PATCH
-modVersion = 1.2.3.0
-modID = gemspark
-modGroup = com.unixkitty.gemspark
+mod_version = 1.2.3.0
+mod_id = gemspark
+mod_name = Gemspark
+mod_author = Unixkitty
+mod_group = com.unixkitty
+mod_url = https://www.curseforge.com/minecraft/mc-mods/gemspark
+mod_description = Credit to JonusRockweller for some assets
+mod_icon = icon.png
 
-modMinecraftVersion = 1.16.5
-modForgeVersion = 36.2.2
+mod_minecraft_version = 1.16.5
+mod_forge_version = 36.2.2
 
 mappingsChannel = official
 mappingsVersion = 1.16.5
