--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -15,27 +15,27 @@ license="All rights reserved"
 # The modid of the mod
 modId="gemspark" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="1.2.3.0" #mandatory
+version="${version}" #mandatory
  # A display name for the mod
-displayName="Gemspark" #mandatory
+displayName="${mod_name}" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
 #updateJSONURL="https://unixkitty.com" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL="https://unixkitty.com" #optional
+displayURL="${mod_url}" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="gemspark.png" #optional
+logoFile="${mod_icon}" #optional
 # A text field displayed in the mod UI
 #credits="" #optional
 # A text field displayed in the mod UI
-authors="Unixkitty" #optional
+authors="${mod_author}" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-Credit to JonusRockweller for some assets
+${mod_description}
 '''
 [[dependencies.gemspark]]
     modId="gemspork"
     mandatory=true
-    versionRange="[1.5,]"
+    versionRange="[1.5,)"
     ordering="NONE"
     side="BOTH"
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
@@ -54,6 +54,6 @@ Credit to JonusRockweller for some assets
 [[dependencies.gemspark]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.5,)"
+    versionRange="[1.16.5,1.17)"
     ordering="NONE"
     side="BOTH"
