--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # MAJOR.API.MINOR.PATCH
-mod_version = 1.2.3.0
+mod_version = 1.2.4.0
 mod_id = gemspark
 mod_name = Gemspark
 mod_author = Unixkitty
@@ -14,10 +14,11 @@ mod_description = Credit to JonusRockweller for some assets
 mod_icon = icon.png
 
 mod_minecraft_version = 1.16.5
-mod_forge_version = 36.2.2
+mod_forge_version = 36.2.22
 
 mappingsChannel = official
 mappingsVersion = 1.16.5
 
-jei_minecraft_version = 1.16.5
-jei_version = 7.7.1.118
+jei_version = 7.7.1.138
+
+curios_version = 4.0.5.3
