Addec optional Curios compatibility

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,16 @@ repositories {
         name = "ModMaven"
         url = "https://modmaven.k-4u.nl"
     }
+    maven {
+        name = "Curios"
+        url = "https://maven.theillusivec4.top/"
+    }
+    maven {
+        url "https://cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
 }
 
 version = mod_minecraft_version + "-" + mod_version
@@ -141,7 +151,10 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
     // at runtime, use the full JEI jar
-    runtimeOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
+    runtimeOnly fg.deobf("mezz.jei:jei-${mod_minecraft_version}:${jei_version}")
+
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${mod_minecraft_version}-${curios_version}")
+    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${mod_minecraft_version}-${curios_version}:api")
 
     //implementation project(":gemspork")
 }
