--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # MAJOR.API.MINOR.PATCH
-mod_version = 1.2.3.0
+mod_version = 1.2.4.1
 mod_id = gemspark
 mod_name = Gemspark
 mod_author = Unixkitty
@@ -19,5 +19,6 @@ mod_forge_version = 37.1.1
 mappingsChannel = official
 mappingsVersion = 1.17.1
 
-jei_minecraft_version = 1.17.1
 jei_version = 8.3.0.45
+
+curios_version = 5.0.2.6
