--- a/gradle.properties
+++ b/gradle.properties
@@ -13,12 +13,12 @@ mod_url = https://www.curseforge.com/minecraft/mc-mods/gemspark
 mod_description = Credit to JonusRockweller for some assets
 mod_icon = icon.png
 
-mod_minecraft_version = 1.17.1
-mod_forge_version = 37.1.1
+mod_minecraft_version = 1.18.2
+mod_forge_version = 40.1.0
 
-mappingsChannel = official
-mappingsVersion = 1.17.1
+mappingsChannel = parchment
+mappingsVersion = 2022.07.10-1.18.2
 
-jei_version = 8.3.0.45
+jei_version = 9.7.0.209
 
-curios_version = 5.0.2.6
+curios_version = 5.0.7.1
