Fixed runData with newer curio versions

--- a/build.gradle
+++ b/build.gradle
@@ -120,6 +120,9 @@ minecraft {
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
             args '--mod', 'gemspark', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
+
             mods {
                 gemspark {
                     source sourceSets.main
