--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,18 @@
-//include ':gemspork'
-//project(':gemspork').projectDir = new File('../gemspork')
-//pluginManagement {
-//    repositories {
-//        gradlePluginPortal()
-//        maven { url = 'https://maven.minecraftforge.net/' }
-//        maven { url = 'https://maven.parchmentmc.org' }
-//        maven {
-//            url = 'https://repo.spongepowered.org/repository/maven-public/'
-//            content { includeGroup "org.spongepowered" }
-//        }
-//    }
-//}
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        maven {
+            name = 'MinecraftForge'
+            url = 'https://maven.minecraftforge.net/'
+        }
+        maven { url = 'https://maven.parchmentmc.org' }
+        maven {
+            name = 'Sponge / Mixin'
+            url = 'https://repo.spongepowered.org/repository/maven-public/'
+        }
+    }
+}
+
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
+}
